--- a/composer.json
+++ b/composer.json
@@ -13,20 +13,13 @@
     ],
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "repositories": [
-	    {
-            "url": "https://github.com/martynbiz/slim-module-auth.git",
-            "type": "git"
-        }
-    ],
     "autoload": {
         "psr-4": {
-            "MartynBiz\\Slim\\Modules\\Blog\\": "Blog/"
+            "MartynBiz\\Slim\\Modules\\Blog\\": "src/"
         }
     },
     "require": {
-        "php": ">=5.3.0",
-        "martynbiz/slim-module-auth": "dev-master"
+        "php": ">=5.3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*"
