--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,32 @@
     ],
     "minimum-stability": "dev",
     "prefer-stable": true,
+    "repositories": [
+        {
+            "url": "https://github.com/martynbiz/slim-module.git",
+            "type": "git"
+        },
+	    {
+            "url": "https://github.com/martynbiz/slim-module-core.git",
+            "type": "git"
+        },
+	    {
+            "url": "https://github.com/martynbiz/slim-module-auth.git",
+            "type": "git"
+        }
+    ],
+    "require": {
+        "php": ">=5.3.0",
+        "martynbiz/slim-module": "dev-master",
+        "martynbiz/slim-module-core": "dev-master",
+        "martynbiz/slim-module-auth": "dev-master"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "4.8.*"
+    },
     "autoload": {
         "psr-4": {
             "MartynBiz\\Slim\\Module\\Blog\\": "src/"
         }
-    },
-    "require": {
-        "php": ">=5.3.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "4.8.*"
     }
 }
